...
    RefreshableLazyColumn(
        isRefreshing = state.refreshing,
        onRefresh = { viewModel.search(true) },
        modifier = Modifier.fillMaxSize(),
    ) {
        item {
            TopAppBar(title = { Text("搜索") })
            Row(
                modifier = Modifier.fillMaxWidth().padding(horizontal = 14.dp),
                horizontalArrangement = Arrangement.spacedBy(8.dp),
            ) {
                OutlinedTextField(
                    value = state.query,
...
